--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
   <h1>バイクショップロミオ多摩店の予約状況</h1>
+  <div class="nav-buttons">
+    <button id="prevWeek">← 先週</button>
+    <button id="nextWeek">翌週 →</button>
+  </div>
   <div id="calendar"></div>
-  <div id="form" class="hidden">***</div>
+  <div id="form" class="hidden"></div>
   <script src="script.js"></script>
 </body>
 </html>
