--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>バイクショップロミオ多摩店の予約状況</title>
+  <title>予約カレンダー</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>バイクショップロミオ多摩店の予約状況</h1>
   <div class="nav-buttons">
-    <button id="prevWeek">← 先週</button>
-    <button id="nextWeek">翌週 →</button>
+    <button id="prevWeek" type="button">← 先週</button>
+    <button id="nextWeek" type="button">翌週 →</button>
   </div>
   <div id="calendar"></div>
   <div id="form" class="hidden"></div>
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
